# practice-2020

1_BlackAndWhite/Tess4J/: build.xml
1_BlackAndWhite/Tess4J/nbproject/: build-impl.xml
1_BlackAndWhite/Tess4J/src/com/recognition/software/jdeskew/: ImageUtil.java
1_BlackAndWhite/Tess4J/src/net/sourceforge/tess4j/: ITessAPI.java  ITesseract.java  TessAPI.java  TessAPI1.java  Tesseract.java  Tesseract1.java  Word.java
1_BlackAndWhite/Tess4J/src/net/sourceforge/tess4j/util/: ImageHelper.java  ImageIOHelper.java
1_BlackAndWhite/Tess4J/test/net/sourceforge/tess4j/: TessAPI1Test.java  TessAPIImpl.java  TessAPITest.java  Tesseract1Test.java  TesseractTest.java  TestFolderExtraction.java  Word.java
1_BlackAndWhite/Tess4J/test/net/sourceforge/tess4j/util/: PdfUtilitiesTest.java
1_BlackAndWhite/src/: BlackAndWhite.java  GridDrawer.java  GridParser.java  GridWriter.java  MyColor.java
4_Maze/: CMakeLists.txt  main.cpp
4_Maze/headers/: cell.h  constants.h  direction.h  dsu.h  maze.h
4_Maze/sources/: cell.cpp  dsu.cpp  maze.cpp
